[package]
name = "drgn-knight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
num-traits = "0.2"
num-derive = "0.4"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.30"
build-target = "0.4.0"
